# mongration

./: .gitignore  README.md  pyproject.toml  requirements.txt
dummy/: cityscape_geo_postprocessing.py
mongrations/: destination.py  graph.py  loading.py  main.py  mongration.py  phase.py  plan.py  program.py  settings.py  source.py
mongrations/engine/: asyncio_engine.py  engine.py  operation.py  sequential_engine.py
mongrations/io/: collection_destination.py  destination.py  file_destination.py  pipe.py  source.py
mongrations/misc/: buffered_drawing.py  documents.py  not_supported.py
mongrations/operations/: aggregation_operation.py  collection_operation.py  cursor_operation.py  delete_collection_operation.py  export_operation.py  import_operation.py  index_operation.py  operation.py  python_operation.py  rename_collection_operation.py
